# ChangeLog for dev-python/winpdb
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/winpdb/ChangeLog,v 1.4 2006/04/01 19:19:43 agriffis Exp $

  01 Apr 2006; Aron Griffis <agriffis@gentoo.org> winpdb-1.0.6-r1.ebuild:
  Mark 1.0.6-r1 ~ia64

*winpdb-1.0.6-r1 (10 Nov 2005)

  10 Nov 2005; Rob Cakebread <pythonhead@gentoo.org> -winpdb-1.0.6.ebuild,
  +winpdb-1.0.6-r1.ebuild:
  Fix line-endings and digest due to upstream file change. bug# 112043

*winpdb-1.0.6 (01 Nov 2005)

  01 Nov 2005; Rob Cakebread <pythonhead@gentoo.org> -winpdb-1.0.1.ebuild,
  +winpdb-1.0.6.ebuild:
  Version bump.

*winpdb-1.0.1 (12 Aug 2005)

  12 Aug 2005; Rob Cakebread <pythonhead@gentoo.org> +winpdb-1.0.1.ebuild:
  Initial commit.
