@@ -26,14 +26,14 @@ EBUILD twisted-conch-0.7.0.ebuild 535 RMD160 f6fe062e888cc299e6d12cf8f6fb003f1a8
 MD5 1026940d9a2170e8e14b64adc6a4dc67 twisted-conch-0.7.0.ebuild 535
 RMD160 f6fe062e888cc299e6d12cf8f6fb003f1a8e8741 twisted-conch-0.7.0.ebuild 535
 SHA256 cd20636c7d884f45fe2e9bae27dfd06f745490840bc3cba1858064d6004d8214 twisted-conch-0.7.0.ebuild 535
-EBUILD twisted-conch-0.8.0.ebuild 439 RMD160 f966e524d4276d8d0a3814a4fcdb74a1eb1cc75e SHA1 b6ae051a7085ae6204e0dc74035fbb8030a92b19 SHA256 511767b36123083a968e9310f9ac6101b6d06ba04834c298351ff403a1f47079
-MD5 c124924424e873856920240910f72233 twisted-conch-0.8.0.ebuild 439
-RMD160 f966e524d4276d8d0a3814a4fcdb74a1eb1cc75e twisted-conch-0.8.0.ebuild 439
-SHA256 511767b36123083a968e9310f9ac6101b6d06ba04834c298351ff403a1f47079 twisted-conch-0.8.0.ebuild 439
-MISC ChangeLog 3439 RMD160 38ee7ef4529de5d73e5f44357c277f8ec5fb87d9 SHA1 eab7717267ee2de7bbff4628587d05e78a9321fd SHA256 6e801f206e4ccab8ed2cbbd69426690e3d296f6029b661f4a4ef8ea0fa7fa3f2
-MD5 2fbf9b1899a7753dbaae493639f7599f ChangeLog 3439
-RMD160 38ee7ef4529de5d73e5f44357c277f8ec5fb87d9 ChangeLog 3439
-SHA256 6e801f206e4ccab8ed2cbbd69426690e3d296f6029b661f4a4ef8ea0fa7fa3f2 ChangeLog 3439
+EBUILD twisted-conch-0.8.0.ebuild 445 RMD160 12598b29408884ccad117a8fe532c6b5ad75aa1b SHA1 9d61d3d0b49f2351976c12e1351bab9b84e96a15 SHA256 5526b17252e54d53aa617723dc0daed4400e78e785fd7ecf9d980634e02fbb6e
+MD5 3a8f419d19b443b8d2a1afed1bfcbc1e twisted-conch-0.8.0.ebuild 445
+RMD160 12598b29408884ccad117a8fe532c6b5ad75aa1b twisted-conch-0.8.0.ebuild 445
+SHA256 5526b17252e54d53aa617723dc0daed4400e78e785fd7ecf9d980634e02fbb6e twisted-conch-0.8.0.ebuild 445
+MISC ChangeLog 3567 RMD160 5a093ff1ef5fc786a0b15476c051f6c884f0c872 SHA1 bf1a3e04589ff0a3fa42b093b2590fbb3f38c45f SHA256 597fc1bd1b2e34b7db9e1ef0ed0219d75ca9327d34ba07c32d978ebe8113c367
+MD5 89f4410c3f5471773af7435c8a7e495c ChangeLog 3567
+RMD160 5a093ff1ef5fc786a0b15476c051f6c884f0c872 ChangeLog 3567
+SHA256 597fc1bd1b2e34b7db9e1ef0ed0219d75ca9327d34ba07c32d978ebe8113c367 ChangeLog 3567
 MISC metadata.xml 218 RMD160 0daf1f824cd7035b959dfc437279171ce5f1075b SHA1 0dc0efeb1f1c4a4e691f1f10d4dd28814582c74e SHA256 1ac3509e75b2cc8bf394a0c7e068039cc0152de1feae40a64b401365c9db67b2
 MD5 bc29fb845d6836abeba3eeff41da8476 metadata.xml 218
 RMD160 0daf1f824cd7035b959dfc437279171ce5f1075b metadata.xml 218
