@@ -1,0 +1,3 @@
+MD5 f9e0a551e152e6c9dbfca0e59a684f43 winpdb-1.0.8.tar.gz 81011
+RMD160 549944dbcdd11dd553ec5cd8fb14e6b112f1eaa9 winpdb-1.0.8.tar.gz 81011
+SHA256 27d4919483f1aafa606f344c44d41da4f3e83fbb007113899bbc498a8d2dc388 winpdb-1.0.8.tar.gz 81011
